inclduing centroid distance as an auxilliary input parameter

--- a/Preprocess-vetting-2023Jun.ipynb
+++ b/Preprocess-vetting-2023Jun.ipynb
@@ -2,26 +2,156 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Skipping Astro ID 966 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 1260 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 1261 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 1270 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 1447 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 1529 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 1928 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 1942 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 1943 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2017 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2077 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2186 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2231 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2256 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2261 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2312 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2377 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2464 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2474 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2501 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2504 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2526 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2559 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2590 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2600 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2653 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2663 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2675 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2772 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2773 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2872 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2875 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 2905 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3033 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3064 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3126 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3130 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3139 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3144 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3169 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3204 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3233 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3235 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3236 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3355 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3362 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3369 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3395 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3411 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3427 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3436 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3438 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3439 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3495 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3573 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3574 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3575 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3576 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3577 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3578 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3579 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3580 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3581 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3582 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3583 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3584 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3585 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3586 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3587 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3588 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3589 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3590 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3591 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3642 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3647 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3685 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3815 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3832 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3833 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 3834 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 7592 because it is not in the centroid table. Label: eb\n",
+      "Skipping Astro ID 8852 because it is not in the centroid table. Label: eb\n",
       "Mismatches between TOI comment and vetting labels Astro ID\n",
       "966      300217120\n",
       "1260    1551168743\n",
       "1261    1551168745\n",
       "1270    1716106614\n",
       "1447     391925531\n",
-      "           ...    \n",
-      "9336    1870990135\n",
-      "9337    1884091865\n",
-      "9341    1980725947\n",
-      "9342    1989628303\n",
-      "9344    2010186093\n",
-      "Name: TIC ID, Length: 4130, dtype: int64\n",
+      "2017     129985650\n",
+      "2186     177991747\n",
+      "2231     192551514\n",
+      "2256     201180053\n",
+      "2261     203036357\n",
+      "2377     229609099\n",
+      "2464     240967708\n",
+      "2501     249925249\n",
+      "2504     250608111\n",
+      "2526     256111905\n",
+      "2559     264614603\n",
+      "2590     271443727\n",
+      "2600     272624139\n",
+      "2653     282785238\n",
+      "2663     285233768\n",
+      "2675     288855848\n",
+      "2905     317470446\n",
+      "3033     331934617\n",
+      "3139     348508349\n",
+      "3144     349572805\n",
+      "3169     356981097\n",
+      "3204     366074071\n",
+      "3233     373901476\n",
+      "3235     375716316\n",
+      "3236     375780380\n",
+      "3355     392569402\n",
+      "3362     394128404\n",
+      "3369     395938570\n",
+      "3395     400669188\n",
+      "3427     410472051\n",
+      "3495     428078277\n",
+      "3574     444725556\n",
+      "3576     445223944\n",
+      "3647     453225534\n",
+      "3832     640763860\n",
+      "3873       1260235\n",
+      "3879       2685481\n",
+      "3880       2758565\n",
+      "3890       4165850\n",
+      "3900       5224772\n",
+      "3914       6785559\n",
+      "3921       7413227\n",
+      "3933       8260536\n",
+      "3965       9907513\n",
+      "4028      17150865\n",
+      "4029      17307715\n",
+      "4031      17409453\n",
+      "4035      17555760\n",
+      "4041      17932757\n",
+      "4043      18017227\n",
+      "4044      18019350\n",
+      "4048      18318288\n",
+      "4072      21101556\n",
+      "4087      22186226\n",
+      "Name: TIC ID, dtype: int64\n",
       "Total entries: 9344\n",
       "Total labeled entries: 8114\n",
       "Skipping these TICs: Astro ID\n",
@@ -104,6 +234,33 @@
     "fpath = f'../mnt/tess/labels/{fname}.csv'\n",
     "all_table = pd.read_csv(fpath, header=0, low_memory=False).set_index('Astro ID')\n",
     "\n",
+    "## Read centroid data\n",
+    "centroid_fpath = \"../mnt/tess/labels/scoop_predictions-May2024.csv\"\n",
+    "centroid_table = pd.read_csv(centroid_fpath, header=0, low_memory=False).set_index('Astro ID')\n",
+    "\n",
+    "## Add minimum Centroid Distance for each Astro ID to all_table\n",
+    "for astro_id in all_table.index:\n",
+    "    if astro_id not in centroid_table.index:\n",
+    "        label = all_table.loc[965]['Final']\n",
+    "        print(f\"Skipping Astro ID {astro_id} because it is not in the centroid table. Label: {label}\")\n",
+    "        if label:\n",
+    "            if label[1] == 't':\n",
+    "                min_centroid_dist = 0\n",
+    "            elif label[1] == 'b':\n",
+    "                min_centroid_dist = 100\n",
+    "            else:\n",
+    "                min_centroid_dist = -1\n",
+    "    else:\n",
+    "        centroid_dist = centroid_table['Centroid Distance'][astro_id]\n",
+    "        if isinstance(centroid_dist, float):\n",
+    "            min_centroid_dist = centroid_dist\n",
+    "        else:\n",
+    "            min_centroid_dist = min(centroid_dist)\n",
+    "\n",
+    "    all_table.loc[astro_id, 'centroid_dist'] = min_centroid_dist\n",
+    "\n",
+    "\n",
+    "\n",
     "## Rename or drop columns\n",
     "all_table.drop(columns=['Split'])\n",
     "all_table = all_table.rename(columns={'filename': 'File', \n",
@@ -123,7 +280,7 @@
     "# Set all TOIs commented with \"CP\", \"PC\", or \"KP\" with the label 'pt'\n",
     "tois_planet_mask = (all_table['comment'].str.contains(\"(PC)\", regex=False).astype(bool) | all_table['comment'].str.contains(\"(CP)\", regex=False).astype((bool)) | all_table['comment'].str.contains(\"(KP)\", regex=False).astype((bool)))\n",
     "# Print mismatches - not labelled planet by vetters, but is a TOI labelled KP, CP or PC (known planet, confirmed planet, planetary candidate)\n",
-    "print('Mismatches between TOI comment and vetting labels', all_table[tois_planet_mask][(all_table[tois_planet_mask]['Final'] != 'pt')]['TIC ID'])\n",
+    "print('Mismatches between TOI comment and vetting labels', all_table[tois_planet_mask][(all_table[tois_planet_mask]['Final'] != 'pt') & (~all_table[tois_planet_mask]['Final'].isna())]['TIC ID'])\n",
     "all_table.loc[tois_planet_mask, 'Final'] = 'pt'\n",
     "\n",
     "\n",
@@ -174,18 +331,39 @@
     "assert not any((t_val['disp_e'] + t_val['disp_p']+ t_val['disp_n'] + t_val['disp_b'] + t_val['disp_t'] + t_val['disp_u']+ t_val['disp_j']) == 0)\n",
     "assert not any((t_test['disp_e'] + t_test['disp_p']+ t_test['disp_n'] + t_test['disp_b'] + t_test['disp_t'] + t_test['disp_u'] + t_test['disp_j']) == 0)\n",
     "\n",
-    "# ## Save train, test, and validation csv iles\n",
-    "# t_train.to_csv(f'../mnt/tess/astronet/tces-{fname}-tois_as_planets-train.csv')\n",
-    "# t_val.to_csv(f'../mnt/tess/astronet/tces-{fname}-tois_as_planets-val.csv')\n",
-    "# t_test.to_csv(f'../mnt/tess/astronet/tces-{fname}-tois_as_planets-test.csv')\n",
-    "# all_table.to_csv(f'../mnt/tess/astronet/tces-{fname}-tois_as_planets-all.csv')\n",
+    "## Save train, test, and validation csv iles\n",
+    "t_train.to_csv(f'../mnt/tess/astronet/tces-{fname}-include-centroiddist-train.csv')\n",
+    "t_val.to_csv(f'../mnt/tess/astronet/tces-{fname}-include-centroiddist-val.csv')\n",
+    "t_test.to_csv(f'../mnt/tess/astronet/tces-{fname}-include-centroiddist-test.csv')\n",
+    "all_table.to_csv(f'../mnt/tess/astronet/tces-{fname}-include-centroiddist-all.csv')\n",
+    "\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'b'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_table.loc[965]['Final'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +406,7 @@
        "['p', 'e', 'n', 'j']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,6 +414,20 @@
    "source": [
     "labels"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
